k8s-manifests/plausible-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plausible
  template:
    metadata:
      labels:
        app: plausible
    spec:
      containers:
      - name: plausible
        image: plausible/analytics:v1.3.0
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        command:
          - /app/bin/plausible
          - start
        volumeMounts:
        - name: app-tmp
          mountPath: /app/tmp
        ports:
        - name: http
          containerPort: 8000
        resources: {}
      volumes:
      - name: app-tmp
        emptyDir: {}
