k8s-manifests/mail-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mail
  name: mail
spec:
  ports:
  - name: http
    port: 25
    targetPort: 25
  selector:
    app: mail
