k8s-manifests/plausible-events-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plausible-events-db
  name: plausible-events-db
spec:
  ports:
  - name: "8123"
    port: 8123
    targetPort: 8123
  selector:
    app: plausible-events-db
