k8s-manifests/plausible-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plausible
  name: plausible
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  type: NodePort
  selector:
    app: plausible
