k8s-manifests/plausible-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plausible
spec:
  rules:
  - host: plausible.bobymcbobs-weekend.pair.sharing.io
    http:
      paths:
      - backend:
          service:
            name: plausible
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - plausible.bobymcbobs-weekend.pair.sharing.io
    secretName: letsencrypt-prod
